tests/ui/g-route-policy-mismatch.stderr
error[E0080]: evaluation panicked: route policy mismatch
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project_role::<0, hibana::g::Route<hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<120, (), hibana::integration::cap::control::RouteDecisionKind>>, 9>, hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<121, (), hibana::integration::cap::control::RouteDecisionKind>>, 10>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_program_projection::<hibana::g::Route<hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<120, (), RouteDecisionKind>>, 9>, hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<121, (), RouteDecisionKind>>, 10>>>`
 --> src/g.rs
  |
  |         panic_program_source_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_program_source_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |         12 => panic!("route policy mismatch"),
  |               ------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project_role::<0, hibana::g::Route<hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<120, (), RouteDecisionKind>>, 9>, hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<121, (), RouteDecisionKind>>, 10>>>`
 --> src/global/role_program/program.rs
  |
  |         crate::g::project_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
